# PTStudio

./: .clang-format  .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  conanfile.py  config.yaml  pts.cmd
core/: CMakeLists.txt
core/api/core/: interfaceUtils.hpp  loggingUtils.h  loggingUtils.hpp  plugin.h  pluginUtils.h  pluginUtils.hpp  types.h
core/include/core/: application.h  archive.h  boundingBox.h  boundingSphere.h  camera.h  continuousGPUBufferLink.h  debugDrawer.h  defines.h  diagnostics.h  embeddedRes.h  enumArray.h  enumIter.h  enumUtils.h  error.h  glfwApplication.h  guiApplication.h  inputAction.h  jsonArchive.h  lightData.h  logging.h  loggingManager.h  object.h  pluginManager.h  renderConfig.h  renderableObject.h  renderer.h  scopeUtils.h  signal.h  singleton.h  texture.h  timeUtils.h  typeTraitsUtil.h  utils.h
core/shaders/: consts.inc  light.inc  material.inc
core/src/: application.cpp  archive.cpp  boundingBox.cpp  camera.cpp  debugDrawer.cpp  glfwApplication.cpp  guiApplication.cpp  guiApplicationGlfw.cpp  guiApplicationImpl.h  inputAction.cpp  intersection.cpp  jsonArchive.cpp  light.cpp  logging.cpp  loggingManager.cpp  object.cpp  objectID.cpp  pluginManager.cpp  renderableObject.cpp  renderer.cpp  scene.cpp  sceneObject.cpp  serialization.cpp  texture.cpp  timeUtils.cpp  transform.cpp
core/src/imgui/: fileDialogue.cpp
core/src/include/: application.h  archive.h  arena.h  boundingBox.h  boundingSphere.h  boundingVolume.h  callbackList.h  camera.h  commands.h  concat.h  consts.h  continuousGPUBufferLink.h  editFlags.h  editableView.h  embeddedRes.h  enumArray.h  enumIter.h  intersection.h  jsonArchive.h  light.h  lightData.h  logging.h  material.h  object.h  objectHandle.h  objectID.h  objectRegistry.h  ray.h  reflection.h  renderConfig.h  renderableObject.h  renderer.h  scene.h  sceneObject.h  serialization.h  singleton.h  stringManip.h  texture.h  transactionScope.h  transform.h  (+3 more)
core/src/legacy/: archive.cpp  boundingBox.cpp  camera.cpp  jsonArchive.cpp  light.cpp  renderableObject.cpp  renderer.cpp  scene.cpp  sceneObject.cpp  texture.cpp
core/src/memory/: arena.cpp  fixedSizePoolAllocator.cpp
core/src/object/: archive.cpp  jsonArchive.cpp  object.cpp  objectID.cpp
core/src/rendering/: imguiBackend.cpp  imguiBackend.h  imguiVulkanPresenter.cpp  imguiVulkanPresenter.h  present.h  renderGraph.cpp  renderGraph.h  renderGraphHost.cpp  renderGraphHost.h  rendering.cpp  renderingComponents.cpp  renderingComponents.h  renderingHost.cpp  rhi.h  rhiBackend.h  swapchainHost.cpp  swapchainHost.h  vulkanBackend.cpp  vulkanBackend.h  vulkanContext.cpp  vulkanContext.h  webgpuContext.cpp  windowing.h
core/tests/: CMakeLists.txt  testPluginSystem.cpp  testReflection.cpp  testTypeTraits.cpp  testWebGpu.cpp  test_compiletime_str.cpp  test_memory.cpp  test_reflection.cpp  test_serialization.cpp  test_type_traits.cpp
core/tests/integration/: testOpenUsd.cpp
cuda_pt_renderer/: CMakeLists.txt
cuda_pt_renderer/example/: main.cu
cuda_pt_renderer/src/: cuda_pt_renderer.cu
cuda_pt_renderer/src/include/: cuda_pt_renderer.cuh
editor/: CMakeLists.txt
editor/shaders/: billboard_fs.glsl  billboard_vs.glsl  blit_fs.glsl  full_screen_quad_vs.glsl  grid_fs.glsl  grid_vs.glsl  mvp_simple_vs.glsl  outline_fs.glsl  unicolor_fs.glsl
editor/shaders/user/: bindings.inc  default_fs.glsl  default_vs.glsl  light.inc  uniforms.inc
editor/src/: UniformVar.cpp  application.cpp  asset.cpp  assetManager.cpp  boundingBox.cpp  camera.cpp  debugDrawer.cpp  editorApplication.cpp  editorConsole.cpp  editorRenderer.cpp  glBuffer.cpp  glFrameBuffer.cpp  glRenderBuffer.cpp  glResource.cpp  glTexture.cpp  glVertexArray.cpp  glfwApplication.cpp  glslHelper.cpp  inputAction.cpp  intersection.cpp  main.cpp  material.cpp  object.cpp  renderGraphHost.cpp  renderResult.cpp  renderer.cpp  scene.cpp  shader.cpp  shaderVariable.cpp  texture.cpp  transform.cpp  vulkanContext.cpp
editor/src/imgui/: editorFields.cpp  fileDialogue.cpp
editor/src/include/: UniformVar.h  application.h  asset.h  assetManager.h  boundingBox.h  camera.h  commands.h  debugDrawer.h  editorApplication.h  editorConsole.h  editorRenderer.h  editorResources.h  editorShader.h  ext.h  glBuffer.h  glFrameBuffer.h  glRenderBuffer.h  glResource.h  glTexture.h  glVertexArray.h  glfwApplication.h  glslHelper.h  inputAction.h  intersection.h  material.h  object.h  renderConfig.h  renderGraphHost.h  renderResult.h  renderer.h  result.h  scene.h  shader.h  shaderType.h  shaderVariable.h  texture.h  transform.h  vertex.h  vulkanContext.h
ext/: CMakeLists.txt
ext/ImGuiColorTextEdit/: TextEditor.cpp
ext/stb/: CMakeLists.txt  stb_impl.cpp
gl_wrapper/: CMakeLists.txt
gl_wrapper/src/: glBuffer.cpp  glFrameBuffer.cpp  glRenderBuffer.cpp  glResource.cpp  glTexture.cpp  glVertexArray.cpp  shader.cpp  uniformVar.cpp
gl_wrapper/src/include/: glBuffer.h  glFrameBuffer.h  glRenderBuffer.h  glResource.h  glTexture.h  glVertexArray.h  shader.h  shaderType.h  uniformVar.h
gl_wrapper/test/: CMakeLists.txt  test_gl_wrapper.cpp
hello_triangle/: CMakeLists.txt
hello_triangle/src/: main.cpp
pathtracer/: CMakeLists.txt
pathtracer/include/: helpers.cuh  utils.h
pathtracer/src/: helpers.cu  main.cu
pathtracer/src/include/: utils.h
plugins/: CMakeLists.txt
plugins/renderers/editor/: CMakeLists.txt  editorRenderer.cpp  editorRenderer.h  plugin.cpp
plugins/test_plugin/: CMakeLists.txt  README.md  testPlugin.cpp  test_plugin.cpp
vulkan_raytracer/: CMakeLists.txt
vulkan_raytracer/include/vulkan_raytracer/: vulkanRayTracingRenderer.h
vulkan_raytracer/shaders/: bindings.inc  chit.glsl  common.inc  light.inc  mesh_attrs.inc  miss.glsl  perframe_data.inc  rgen.glsl
vulkan_raytracer/src/: vulkanAccelStructInfo.cpp  vulkanDescSetInfo.cpp  vulkanGLInterop.cpp  vulkanHelper.cpp  vulkanRTPipelineInfo.cpp  vulkanRayTracingRenderer.cpp
vulkan_raytracer/src/include/: params.h  shaderCommon.h  vulkanAccelStructInfo.h  vulkanBufferInfo.h  vulkanDescSetInfo.h  vulkanGLInterop.h  (+5 more)
(+162 files in other folders)
